--- a/views/error.hbs
+++ b/views/error.hbs
@@ -56,7 +56,7 @@
 		<p>{{error.status}}</p>
 		{{!-- <p>{{error.stack}}</p> --}}
 		
-		<a href="/" class="link_404">Go to Home</a>
+		<a href="/" class="btn btn-warning">Go to Home</a>
 	</div>
 		</div>
 		</div>
